--- a/index.html
+++ b/index.html
@@ -1,21 +1,46 @@
 <p>
-• Go is a programming language design started in 2007 and developed as open source in Google by Ken Thompson, Rob Pike and Robert Griesemer in 2009. Version 1.0 was released by Google in 2012 and as of early 2018 it had reached version 1.9.3
-• In the world of computer science, both Ken Thompson and Rob Pikes had been highly renowned for their works at the prestigious Bell Labs, before joining Google. Ken Thompson designed the original Unix operating system and created B, the predecessor to the present day legendary C pogramming language. Rob Pike was the member of the Bell Labs' Unix team. He and Ken Thompson collaborated to create the original design of UTF-8 encoding as defined by Unicode standards. Their UTF-8 encoding system is backward-compatible with ASCII and has been dominant in character encoding for World Wide Web since 2009. 
-The three inventors of Golang mentioned their shared dislikes for the overly complicated C++ as the one of the main reason prompting  them to design  the new programming language. 
-source https://en.wikipedia.org/w/index.php?title=Go_(programming_language)&oldid=822810173
-    https://en.wikipedia.org/w/index.php?title=Ken_Thompson&oldid=823367592
-    https://en.wikipedia.org/w/index.php?title=Rob_Pike&oldid=818627078
-    https://en.wikipedia.org/w/index.php?title=UTF-8&oldid=823150813
+    <ul>
+    <li>Go is a programming language design started in 2007 and developed as open source in Google <br>
+        by Ken Thompson, Rob Pike and Robert Griesemer in 2009. Version 1.0 was released by Google in 2012<br>
+        and as of early 2018 it had reached version 1.9.3<br>
+    </li>
+    <li>In the world of computer science, both Ken Thompson and Rob Pikes had been highly renowned<br> 
+        for their works at the prestigious Bell Labs, before joining Google. Ken Thompson designed <br>
+        the original Unix operating system and created B, the predecessor to the present day legendary<br> 
+        C pogramming language. Rob Pike was the member of the Bell Labs' Unix team. He and Ken Thompson<br>
+        collaborated to create the original design of UTF-8 encoding as defined by Unicode standards.<br>
+        Their UTF-8 encoding system is backward-compatible with ASCII and has been dominant in character<br> 
+        encoding for World Wide Web since 2009.<br>
+    </li>
+    <li>
+    The three inventors of Golang mentioned their shared dislikes for the overly complicated C++ as one<br>
+    of the main reason prompting  them to design  the new programming language.<br> 
+    source  <a href= "https://en.wikipedia.org/w/index.php?title=Go_(programming_language)&oldid=822810173"></a><br>
+            <a href= "https://en.wikipedia.org/w/index.php?title=Ken_Thompson&oldid=823367592"></a><br>
+            <a href= "https://en.wikipedia.org/w/index.php?title=Rob_Pike&oldid=818627078"></a><br>
+            <a href= "https://en.wikipedia.org/w/index.php?title=UTF-8&oldid=823150813"></a><br>
+    </li>
 
-
-• Go is also known as Golang and according to its official website at Golang.org, 
-"Go is a general-purpose language designed with systems programming in mind. It is strongly typed and garbage-collected and has explicit support for concurrent programming."
-source https://golang.org/ref/spec
-
-• Balbaert(2012) mentioned that Golang was created for ease of programming, fast compilation and execution. 
-Balbaert, I.: The way to Go: A thorough introduction to the Go programming language. iUniverse, USA (2012)
-
-• From my understanding, the language offers a concise alternative to object orientation methodology and yet, it presents a powerful approach to program scalable and natively concurrent codes. This was intended to harness the power of parallel processing enabled by multicore CPUs which first generations of were available to the general public back in 2005/2006.
-
-• Probably, the inventors wanted to create a language which is modern and powerful, but at the same more streamlined and less complexed than C++. Created shortly after the first availabilty of multicore processing, they must had designed Golang with concurrency in mind.  Due to this, in comparison to the older, pre-multicore languages, Golang is claimed to able to do a lot more multiple things at any one time. This capability in handling outstanding processing volume drives up the scalability of the language.
+    <li>
+    Go is also known as Golang and according to its official website at Golang.org,<br> 
+    "Go is a general-purpose language designed with systems programming in mind. It is strongly typed and<br> 
+    garbage-collected and has explicit support for concurrent programming."<br>
+    source <a href="https://golang.org/ref/spec"></a><br>
+    </li>
+    <li>
+    Balbaert(2012) mentioned that Golang was created for ease of programming, fast compilation and execution.<br> 
+    <em>Balbaert, I.: The way to Go: A thorough introduction to the Go programming language. iUniverse, USA (2012)</em><br>
+    </li>
+    <li>
+    From my understanding, the language offers a concise alternative to object orientation methodology<br> 
+    and yet, it presents a powerful approach to program scalable and natively concurrent codes.<br>
+    This was designed to harness the power of parallel processing enabled by multicore CPUs which<br>
+    first generations of were available to the general public back in 2005/2006.<br>
+    Probably, the inventors wanted to create a language which is modern and powerful, but at the same time<br>
+    more streamlined and less complexed than C++. Created shortly after the first availabilty of multicore<br>
+    processing, they must had designed Golang with concurrency in mind.  Due to this, in comparison to<br>
+    the older, pre-multicore languages, Golang is claimed to able to do a lot more multiple things at any<br> 
+    one time. This capability in handling outstanding processing volume drives up the scalability of the<br>
+    language.
+    </ul>
 </p>
