more tags added to index.html

--- a/index.html
+++ b/index.html
@@ -1,9 +1,15 @@
+
+<html>
+<title>Go Programming Fundamentals</title>
+<body>
+<h1>Introducing Go Programming Language</h1>   
 <p>
     <ul>
     <li>Go is a programming language design started in 2007 and developed as open source in Google <br>
         by Ken Thompson, Rob Pike and Robert Griesemer in 2009. Version 1.0 was released by Google in 2012<br>
         and as of early 2018 it had reached version 1.9.3<br>
     </li>
+    <br>
     <li>In the world of computer science, both Ken Thompson and Rob Pikes had been highly renowned<br> 
         for their works at the prestigious Bell Labs, before joining Google. Ken Thompson designed <br>
         the original Unix operating system and created B, the predecessor to the present day legendary<br> 
@@ -12,26 +18,29 @@
         Their UTF-8 encoding system is backward-compatible with ASCII and has been dominant in character<br> 
         encoding for World Wide Web since 2009.<br>
     </li>
+    <br>
     <li>
     The three inventors of Golang mentioned their shared dislikes for the overly complicated C++ as one<br>
     of the main reason prompting  them to design  the new programming language.<br> 
-    source:<br>  
-            <a href= "https://en.wikipedia.org/w/index.php?title=Go_(programming_language)&oldid=822810173">wikipedia ref 1 1</a><br>
+    ref:<br>  
+            <a href= "https://en.wikipedia.org/w/index.php?title=Go_(programming_language)&oldid=822810173">wikipedia ref 1</a><br>
             <a href= "https://en.wikipedia.org/w/index.php?title=Ken_Thompson&oldid=823367592">wikipedia ref 2</a><br>
             <a href= "https://en.wikipedia.org/w/index.php?title=Rob_Pike&oldid=818627078">wikipedia ref 3</a><br>
             <a href= "https://en.wikipedia.org/w/index.php?title=UTF-8&oldid=823150813">wikipedia ref 4</a><br>
     </li>
-
+    <br>
     <li>
     Go is also known as Golang and according to its official website at Golang.org,<br> 
     "Go is a general-purpose language designed with systems programming in mind. It is strongly typed and<br> 
     garbage-collected and has explicit support for concurrent programming."<br>
-    source: <a href="https://golang.org/ref/spec">https://golang.org/ref/spec</a><br>
+    ref: <a href="https://golang.org/ref/spec">https://golang.org/ref/spec</a><br>
     </li>
+    <br>
     <li>
     Balbaert(2012) mentioned that Golang was created for ease of programming, fast compilation and execution.<br> 
-    <em>Balbaert, I.: The way to Go: A thorough introduction to the Go programming language. iUniverse, USA (2012)</em><br>
+    Ref:<em>Balbaert, I.: The way to Go: A thorough introduction to the Go programming language. iUniverse, USA (2012)</em><br>
     </li>
+    <br>
     <li>
     From my understanding, the language offers a concise alternative to object orientation methodology<br> 
     and yet, it presents a powerful approach to program scalable and natively concurrent codes.<br>
@@ -45,3 +54,5 @@
     language.
     </ul>
 </p>
+</body>
+</html>
