font size & color update

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <title>Go Programming Fundamentals</title>
 <body>
 <h1>Introducing Go Programming Language</h1>   
-<p>
+<p><font size=4 face=arial color="purple"></font>
     <ul>
     <li>Go is a programming language design started in 2007 and developed as open source in Google <br>
         by Ken Thompson, Rob Pike and Robert Griesemer in 2009. Version 1.0 was released by Google in 2012<br>
@@ -22,11 +22,7 @@
     <li>
     The three inventors of Golang mentioned their shared dislikes for the overly complicated C++ as one<br>
     of the main reason prompting  them to design  the new programming language.<br> 
-    ref:<br>  
-            <a href= "https://en.wikipedia.org/w/index.php?title=Go_(programming_language)&oldid=822810173">wikipedia ref 1</a><br>
-            <a href= "https://en.wikipedia.org/w/index.php?title=Ken_Thompson&oldid=823367592">wikipedia ref 2</a><br>
-            <a href= "https://en.wikipedia.org/w/index.php?title=Rob_Pike&oldid=818627078">wikipedia ref 3</a><br>
-            <a href= "https://en.wikipedia.org/w/index.php?title=UTF-8&oldid=823150813">wikipedia ref 4</a><br>
+    ref:<a href= "https://en.wikipedia.org/w/index.php?title=Go_(programming_language)&oldid=822810173">Wikipedia The Free Encyclopedia</a><br>        
     </li>
     <br>
     <li>
@@ -37,8 +33,8 @@
     </li>
     <br>
     <li>
-    Balbaert(2012) mentioned that Golang was created for ease of programming, fast compilation and execution.<br> 
-    Ref:<em>Balbaert, I.: The way to Go: A thorough introduction to the Go programming language. iUniverse, USA (2012)</em><br>
+    In his book, Balbaert(2012) mentioned that Golang was created for ease of programming, fast compilation and execution.<br> 
+    ref: Balbaert, I.: The way to Go: A thorough introduction to the Go programming language. iUniverse, USA (2012)<br>
     </li>
     <br>
     <li>
@@ -53,6 +49,7 @@
     one time. This capability in handling outstanding processing volume drives up the scalability of the<br>
     language.
     </ul>
+</font>
 </p>
 </body>
 </html>
