--- a/index.html
+++ b/index.html
@@ -3,7 +3,8 @@
 <title>Go Programming Fundamentals</title>
 <body>
 <h1>Introducing Go Programming Language</h1>   
-<p><font size=5 face=arial color="blue"></font>
+<p><font style="font-style: normal; font-size: 18px; font-weight: bold;
+    color: #2600ff;">
     <ul>
     <li>Go is a programming language design started in 2007 and developed as open source in Google <br>
         by Ken Thompson, Rob Pike and Robert Griesemer in 2009. Version 1.0 was released by Google in 2012<br>
