corrections to index.html

--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
 <title>Go Programming Fundamentals</title>
-<body>
+<body style="background-color: #80a3c5;">
 <h1>Introducing Go Programming Language</h1>   
 <p><font style="font-style: normal; font-size: 18px; font-weight: bold;
     color: #2600ff;">
