font size & color update

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 
 <html>
 <title>Go Programming Fundamentals</title>
-<body style="background-color: #80a3c5;">
+<body style="background-color: #dee0e6;">
 <h1>Introducing Go Programming Language</h1>   
-<p><font style="font-style: normal; font-size: 18px; font-weight: bold;
-    color: #2600ff;">
+<p><font style="font:verdana; font-style: normal; font-size: 16px; font-weight:normal;
+    color: #393552;">
     <ul>
     <li>Go is a programming language design started in 2007 and developed as open source in Google <br>
         by Ken Thompson, Rob Pike and Robert Griesemer in 2009. Version 1.0 was released by Google in 2012<br>
