hyperlinks  added to index.html

--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
 <body style="background-color: #dee0e6;">
 <h1>Introducing Go Programming Language</h1>   
 <p><font style="font:verdana; font-style: normal; font-size: 20px; font-weight:normal;
-    color: #393552;">
+    color: #161231; line-height:2">
     <ul>
     <li>Go is a programming language design started in 2007 and developed as open source in Google <br>
         by Ken Thompson, Rob Pike and Robert Griesemer in 2009. Version 1.0 was released by Google in 2012<br>
