--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 
 <html>
 <title>Go Programming Fundamentals</title>
+<h3>By:<a href="mailto:nazillahhy@gmail.com>NazillahHY</a></h3><br><hr>
 <body style="background-color: #dee0e6;">
-<h1>Introducing Go Programming Language</h1>   
+<h1>Introducing Go Programming Language</h1> 
+  
 <p><font style="font:verdana; font-style: normal; font-size: 20px; font-weight:normal;
     color: #161231; line-height:2">
     <ul>
@@ -23,32 +25,32 @@
     <li>
     The three inventors of Golang mentioned their shared dislikes for the overly complicated C++ as one<br>
     of the main reason prompting  them to design  the new programming language.<br> 
-    ref:<a href= "https://en.wikipedia.org/w/index.php?title=Go_(programming_language)&oldid=822810173">Wikipedia The Free Encyclopedia</a><br>        
+    <em>ref:<a href= "https://en.wikipedia.org/w/index.php?title=Go_(programming_language)&oldid=822810173">Wikipedia The Free Encyclopedia</a></em><br>        
     </li>
     <br>
     <li>
     Go is also known as Golang and according to its official website at Golang.org,<br> 
     "Go is a general-purpose language designed with systems programming in mind. It is strongly typed and<br> 
     garbage-collected and has explicit support for concurrent programming."<br>
-    ref: <a href="https://golang.org/ref/spec">https://golang.org/ref/spec</a><br>
+    <em>ref: <a href="https://golang.org/ref/spec">https://golang.org/ref/spec</a></em>><br>
     </li>
     <br>
     <li>
     In his book, Balbaert(2012) mentioned that Golang was created for ease of programming, fast compilation and execution.<br> 
-    ref: Balbaert, I.: The way to Go: A thorough introduction to the Go programming language. iUniverse, USA (2012)<br>
+    <em>ref: Balbaert, I.: The way to Go: A thorough introduction to the Go programming language. iUniverse, USA (2012)</em>><br>
     </li>
     <br>
     <li>
     From my understanding, the language offers a concise alternative to object orientation methodology<br> 
     and yet, it presents a powerful approach to program scalable and natively concurrent codes.<br>
-    This was designed to harness the power of parallel processing enabled by multicore CPUs which<br>
-    first generations of were available to the general public back in 2005/2006.<br>
+    Golang seems to be designed to harness the power of parallel processing enabled by multicore CPUs with<br>
+    the earliest generations of were only available to the general public from 2005/2006 onwards.
     Probably, the inventors wanted to create a language which is modern and powerful, but at the same time<br>
     more streamlined and less complexed than C++. Created shortly after the first availabilty of multicore<br>
-    processing, they must had designed Golang with concurrency in mind.  Due to this, in comparison to<br>
-    the older, pre-multicore languages, Golang is claimed to able to do a lot more multiple things at any<br> 
-    one time. This capability in handling outstanding processing volume drives up the scalability of the<br>
-    language.
+    processing to the general public, they must had designed Golang with concurrency in mind. In comparison to<br>
+    older, pre-multicore, enterprise grade languages, Golang is expected to run much cheaper multiple processes<br> 
+    and deliver much better scalability<br>
+    </li>
     </ul>
 </font>
 </p>
