--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 
 <html>
 <title>Go Programming Fundamentals</title>
-<h3>By:<a href="mailto:nazillahhy@gmail.com>NazillahHY</a></h3><br><hr>
+<h3>By:<a href="mailto:nazillahhy@gmail.com">NazillahHY</a></h3>
 <body style="background-color: #dee0e6;">
 <h1>Introducing Go Programming Language</h1> 
   
