--- a/index.html
+++ b/index.html
@@ -37,14 +37,14 @@
     <br>
     <li>
     In his book, Balbaert(2012) mentioned that Golang was created for ease of programming, fast compilation and execution.<br> 
-    <em>ref: Balbaert, I.: The way to Go: A thorough introduction to the Go programming language. iUniverse, USA (2012)</em>><br>
+    <em>ref: Balbaert, I.: The way to Go: A thorough introduction to the Go programming language. iUniverse, USA (2012)</em><br>
     </li>
     <br>
     <li>
     From my understanding, the language offers a concise alternative to object orientation methodology<br> 
     and yet, it presents a powerful approach to program scalable and natively concurrent codes.<br>
     Golang seems to be designed to harness the power of parallel processing enabled by multicore CPUs with<br>
-    the earliest generations of were only available to the general public from 2005/2006 onwards.
+    the earliest generations of were only available to the general public from 2005/2006 onwards.<br>
     Probably, the inventors wanted to create a language which is modern and powerful, but at the same time<br>
     more streamlined and less complexed than C++. Created shortly after the first availabilty of multicore<br>
     processing to the general public, they must had designed Golang with concurrency in mind. In comparison to<br>
