--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
 <html>
 <title>Go Programming Fundamentals</title>
 <h3>By:<a href="mailto:nazillahhy@gmail.com">NazillahHY</a></h3>
-<body style="background-color: #dee0e6;">
-<h1>Introducing Go Programming Language</h1> 
+<body style="background-color: #fcf9eb;">
+<h1><font style="font:arial; color:#4f6070;">Introducing Go</font></h1> 
   
-<p><font style="font:verdana; font-style: normal; font-size: 20px; font-weight:normal;
-    color: #161231; line-height:2">
+<p><font style="font:arial; font-style: normal; font-size: 20px; font-weight:normal;
+    color: #494081; line-height:2">
     <ul>
     <li>Go is a programming language design started in 2007 and developed as open source in Google <br>
         by Ken Thompson, Rob Pike and Robert Griesemer in 2009. Version 1.0 was released by Google in 2012<br>
