--- a/index.html
+++ b/index.html
@@ -1,58 +1,66 @@
 
 <html>
-<title>Go Programming Fundamentals</title>
-<h3>By:<a href="mailto:nazillahhy@gmail.com">NazillahHY</a></h3>
-<body style="background-color: #fcf9eb;">
-<h1><font style="font:arial; color:#4f6070;">Introducing Go</font></h1> 
-  
-<p><font style="font:arial; font-style: normal; font-size: 20px; font-weight:normal;
-    color: #494081; line-height:2">
-    <ul>
-    <li>Go is a programming language design started in 2007 and developed as open source in Google <br>
-        by Ken Thompson, Rob Pike and Robert Griesemer in 2009. Version 1.0 was released by Google in 2012<br>
-        and as of early 2018 it had reached version 1.9.3<br>
-    </li>
-    <br>
-    <li>In the world of computer science, both Ken Thompson and Rob Pikes had been highly renowned<br> 
-        for their works at the prestigious Bell Labs, before joining Google. Ken Thompson designed <br>
-        the original Unix operating system and created B, the predecessor to the present day legendary<br> 
-        C pogramming language. Rob Pike was the member of the Bell Labs' Unix team. He and Ken Thompson<br>
-        collaborated to create the original design of UTF-8 encoding as defined by Unicode standards.<br>
-        Their UTF-8 encoding system is backward-compatible with ASCII and has been dominant in character<br> 
-        encoding for World Wide Web since 2009.<br>
-    </li>
-    <br>
-    <li>
-    The three inventors of Golang mentioned their shared dislikes for the overly complicated C++ as one<br>
-    of the main reason prompting  them to design  the new programming language.<br> 
-    <em>ref:<a href= "https://en.wikipedia.org/w/index.php?title=Go_(programming_language)&oldid=822810173">Wikipedia The Free Encyclopedia</a></em><br>        
-    </li>
-    <br>
-    <li>
-    Go is also known as Golang and according to its official website at Golang.org,<br> 
-    "Go is a general-purpose language designed with systems programming in mind. It is strongly typed and<br> 
-    garbage-collected and has explicit support for concurrent programming."<br>
-    <em>ref: <a href="https://golang.org/ref/spec">https://golang.org/ref/spec</a></em>><br>
-    </li>
-    <br>
-    <li>
-    In his book, Balbaert(2012) mentioned that Golang was created for ease of programming, fast compilation and execution.<br> 
-    <em>ref: Balbaert, I.: The way to Go: A thorough introduction to the Go programming language. iUniverse, USA (2012)</em><br>
-    </li>
-    <br>
-    <li>
-    From my understanding, the language offers a concise alternative to object orientation methodology<br> 
-    and yet, it presents a powerful approach to program scalable and natively concurrent codes.<br>
-    Golang seems to be designed to harness the power of parallel processing enabled by multicore CPUs with<br>
-    the earliest generations of were only available to the general public from 2005/2006 onwards.<br>
-    Probably, the inventors wanted to create a language which is modern and powerful, but at the same time<br>
-    more streamlined and less complexed than C++. Created shortly after the first availabilty of multicore<br>
-    processing to the general public, they must had designed Golang with concurrency in mind. In comparison to<br>
-    older, pre-multicore, enterprise grade languages, Golang is expected to run much cheaper multiple processes<br> 
-    and deliver much better scalability<br>
-    </li>
-    </ul>
-</font>
-</p>
+<head>
+    <title>Go Programming Fundamentals</title>
+    <style>
+        h1   {color: #4f6070;}
+        h4   {color:#4f6070;}
+        body {background-color:#fcf9eb; }
+        p    {color:#494081;font-style: normal;font-size: 20px;font-weight: normal;line-height: 2in}
+    </style>
+</head>
+
+<h4>By: <a href="mailto:nazillahhy@gmail.com">NazillahHY</a></h4>
+<h1>Introducing Go</h1> 
+<body>
+    
+    <p>
+        <ul>
+        <li>Go is a programming language design started in 2007 and developed as open source in Google <br>
+            by Ken Thompson, Rob Pike and Robert Griesemer in 2009. Version 1.0 was released by Google in 2012<br>
+            and as of early 2018 it had reached version 1.9.3<br>
+        </li>
+        <br>
+        <li>In the world of computer science, both Ken Thompson and Rob Pikes had been highly renowned<br> 
+            for their works at the prestigious Bell Labs, before joining Google. Ken Thompson designed <br>
+            the original Unix operating system and created B, the predecessor to the present day legendary<br> 
+            C pogramming language. Rob Pike was the member of the Bell Labs' Unix team. He and Ken Thompson<br>
+            collaborated to create the original design of UTF-8 encoding as defined by Unicode standards.<br>
+            Their UTF-8 encoding system is backward-compatible with ASCII and has been dominant in character<br> 
+            encoding for World Wide Web since 2009.<br>
+        </li>
+        <br>
+        <li>
+        The three inventors of Golang mentioned their shared dislikes for the overly complicated C++ as one<br>
+        of the main reason prompting  them to design  the new programming language.<br> 
+        <em>ref:<a href= "https://en.wikipedia.org/w/index.php?title=Go_(programming_language)&oldid=822810173">Wikipedia The Free Encyclopedia</a></em><br>        
+        </li>
+        <br>
+        <li>
+        Go is also known as Golang and according to its official website at Golang.org,<br> 
+        "Go is a general-purpose language designed with systems programming in mind. It is strongly typed and<br> 
+        garbage-collected and has explicit support for concurrent programming."<br>
+        <em>ref: <a href="https://golang.org/ref/spec">https://golang.org/ref/spec</a></em>><br>
+        </li>
+        <br>
+        <li>
+        In his book, Balbaert(2012) mentioned that Golang was created for ease of programming, fast compilation and execution.<br> 
+        <em>ref: Balbaert, I.: The way to Go: A thorough introduction to the Go programming language. iUniverse, USA (2012)</em><br>
+        </li>
+        <br>
+        <li>
+        From my understanding, the language offers a concise alternative to object orientation methodology<br> 
+        and yet, it presents a powerful approach to program scalable and natively concurrent codes.<br>
+        Golang seems to be designed to harness the power of parallel processing enabled by multicore CPUs with<br>
+        the earliest generations of were only available to the general public from 2005/2006 onwards.<br>
+        Probably, the inventors wanted to create a language which is modern and powerful, but at the same time<br>
+        more streamlined and less complexed than C++. Created shortly after the first availabilty of multicore<br>
+        processing to the general public, they must had designed Golang with concurrency in mind. In comparison to<br>
+        older, pre-multicore, enterprise grade languages, Golang is expected to run much cheaper multiple processes<br> 
+        and deliver much better scalability<br>
+        </li>
+        </ul>
+    </p>
+
 </body>
 </html>
