more css content

--- a/index.html
+++ b/index.html
@@ -3,17 +3,18 @@
 <head>
     <title>Go Programming Fundamentals</title>
     <style>
-        h1   {color: #4f6070;}
-        h4   {color:#4f6070;}
+        h1   {color: #4f6070;font-family: fantasy}
+        h4   {color:#4f6070;font-family: fantasy}
         body {background-color:#fcf9eb; }
-        p    {color:#494081;font-style: normal;font-size: 20px;font-weight: normal;line-height: 2in}
+        p    {font-family: fantasy;color:#494081;font-style: normal;font-size: 20px;font-weight: normal;line-height: 2in}
     </style>
 </head>
 
-<h4>By: <a href="mailto:nazillahhy@gmail.com">NazillahHY</a></h4>
-<h1>Introducing Go</h1> 
 <body>
-    
+
+    <h4>By: <a href="mailto:nazillahhy@gmail.com">NazillahHY</a></h4>
+    <h1>Introducing Go</h1>    
+
     <p>
         <ul>
         <li>Go is a programming language design started in 2007 and developed as open source in Google <br>
