--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <title>Go Programming Fundamentals</title>
     <style>
-        h1   {color: #4f6070;font-family: fantasy}
-        h4   {color:#4f6070;font-family: fantasy}
-        body {background-color:#fcf9eb; }
-        p    {font-family: fantasy;color:#494081;font-style: normal;font-size: 20px;font-weight: normal;line-height: 2in}
+        h1   {color: #4f6070;font-family:Arial, Helvetica, sans-serif;}
+        h4   {color:#4f6070;font-family: Arial, Helvetica, sans-serif;}
+        body {background-color:#fcf9eb;}
+        p    {font-family:Arial, Helvetica, sans-serif;font-style: normal;font-size: 20px;font-weight: normal;line-height:2;}
     </style>
 </head>
 
