--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
         h1   {color: #4f6070;font-family:Arial, Helvetica, sans-serif;}
         h4   {color:#4f6070;font-family: Arial, Helvetica, sans-serif;}
         body {background-color:#fcf9eb;}
-        p    {font-family:Arial, Helvetica, sans-serif;font-style: normal;font-size:large;font-weight: normal;line-height:1.6;}
+        p    {font-family:Arial, Helvetica, sans-serif;font-style: normal;font-size:x-large;font-weight: normal;line-height:1.6;}
     </style>
 </head>
 
