--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@
 <head>
     <title>Go Programming Fundamentals</title>
     <style>
-        h1   {color: #4f6070;font-family:Arial, Helvetica, sans-serif;}
-        h4   {color:#4f6070;font-family: Arial, Helvetica, sans-serif;}
-        body {background-color:#fcf9eb;}
-        p    {font-family:'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;font-style: normal;font-size:xx-large;font-weight: normal;line-height:200%;}
+        h1   {color: #4f6070;font-family:Verdana, Geneva, Tahoma, sans-serif;}
+        h4   {color:#4f6070;font-family:Verdana, Geneva, Tahoma, sans-serif;}
+        body {background-color:#fcf9eb;font-size: xx-large; line-height: 200%;font-family:Verdana, Geneva, Tahoma, sans-serif;}
+        p    {font-style: normal;font-weight: normal;}
     </style>
 </head>
 
