--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         h1   {color: #4f6070;font-family:Verdana, Geneva, Tahoma, sans-serif;}
         h4   {color:#4f6070;font-family:Verdana, Geneva, Tahoma, sans-serif;}
-        body {background-color:#fcf9eb;font-size: xx-large; line-height: 200%;font-family:Verdana, Geneva, Tahoma, sans-serif;}
+        body {background-color:#fcf9eb;font-size: x-large; line-height: 200%;font-family:Verdana, Geneva, Tahoma, sans-serif;}
         p    {font-style: normal;font-weight: normal;}
     </style>
 </head>
