--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <style>
         h1   {color: #4f6070;font-family:Verdana, Geneva, Tahoma, sans-serif;}
         h4   {color:#4f6070;font-family:Verdana, Geneva, Tahoma, sans-serif;}
-        body {background-color:#fcf9eb;font-size: large; line-height: 200%;font-family:Verdana, Geneva, Tahoma, sans-serif;}
+        body {background-color:#fcf9eb;font-size: 16px; line-height: 200%;font-family:Verdana, Geneva, Tahoma, sans-serif;}
         p    {font-style: normal;font-weight: normal;}
     </style>
 </head>
@@ -41,7 +41,7 @@
         Go is also known as Golang and according to its official website at Golang.org,
         "Go is a general-purpose language designed with systems programming in mind. It is strongly typed and
         garbage-collected and has explicit support for concurrent programming."<br>
-        <em>ref: <a href="https://golang.org/ref/spec">https://golang.org/ref/spec</a></em>>
+        <em>ref: <a href="https://golang.org/ref/spec">https://golang.org/ref/spec</a></em>
         </li>
         
         <li>
