--- a/index.html
+++ b/index.html
@@ -3,47 +3,72 @@
 <head>
     <title>Go Programming Fundamentals</title>
     <style>
-        h1   {color: #4f6070;font-family:Verdana, Geneva, Tahoma, sans-serif;}
-        h4   {color:#4f6070;font-family:Verdana, Geneva, Tahoma, sans-serif;}
+        h1,h2,h4   {color: #4f6070;font-family:Verdana, Geneva, Tahoma, sans-serif;}
         body {background-color:#fcf9eb;font-size: 16px; line-height: 200%;font-family:Verdana, Geneva, Tahoma, sans-serif;}
         p    {font-style: normal;font-weight: normal;}
+        a:link{color: darkgreen}
+
+        div.gallery {
+        margin: 5px;
+        border: 1px solid #ccc;
+        float:none;
+        width: auto;
+        }
+
+        div.gallery:hover {
+            border: 1px solid #777;
+        }
+
+        div.gallery img {
+            display: block;
+            margin-top: 15px;
+            margin-left: auto;
+            margin-right: auto;
+            width: 15%;
+            height: auto;
+        }
+
+        div.desc {
+            padding: 15px;
+            text-align: center;
+        }
     </style>
 </head>
 
 <body>
+    <div class="gallery">
+        <a target="_blank" href="go.jpg">
+            <img src="go.jpg" alt="gopher">
+        </a>
+        <div class="desc">ease of programming, efficient compilation & fast execution</div>
+    </div>
 
-    <h4>By: <a href="mailto:nazillahhy@gmail.com">NazillahHY</a></h4>
-    <p>
-
-    </p>
+    <h4>By: <a href="mailto:nazillahhy@gmail.com">NazillahHY</a></h4>    
     <h1>Introducing Go</h1>    
-
     <p>
         <ul>
-        <li>Go is a programming language design started in 2007 and developed as open source in Google
+        <li>Go is a programming language the design of which started in 2007 and developed as open source in Google
             by Ken Thompson, Rob Pike and Robert Griesemer in 2009. Version 1.0 was released by Google in 2012
-            and as of early 2018 it had reached version 1.9.3
+            and by early 2018 it had reached version 1.9.3
         </li>
         <br>
         <li>In the world of computer science, both Ken Thompson and Rob Pikes had been highly renowned
             for their works at the prestigious Bell Labs, before joining Google. Ken Thompson designed
             the original Unix operating system and created B, the predecessor to the present day legendary 
-            C pogramming language. Rob Pike was the member of the Bell Labs' Unix team. He and Ken Thompson
+            C pogramming language. Rob Pike was the member of Bell Labs' Unix team. He and Ken Thompson
             collaborated to create the original design of UTF-8 encoding as defined by Unicode standards.
             Their UTF-8 encoding system is backward-compatible with ASCII and has been dominant in character 
             encoding for World Wide Web since 2009.
-        </li>
-        <br>
-        <li>
-        The three inventors of Golang mentioned their shared dislikes for the overly complicated C++ as one
-        of the main reason prompting  them to design  the new programming language.<br> 
+            The three inventors of Golang mentioned their shared dislikes for the overly complicated C++ as one
+            of the main reason prompting  them to design  the new programming language.<br> 
         <em>ref:<a href= "https://en.wikipedia.org/w/index.php?title=Go_(programming_language)&oldid=822810173">Wikipedia The Free Encyclopedia</a></em>       
         </li>
         <br>
         <li>
-        Go is also known as Golang and according to its official website at Golang.org,
-        "Go is a general-purpose language designed with systems programming in mind. It is strongly typed and
-        garbage-collected and has explicit support for concurrent programming."<br>
+        Go is also known as Golang and according to its official website at Golang.org,<blockquote>
+        "Go is a general-purpose language designed with systems programming in mind. It is strongly 
+        typed and garbage-collected and has explicit support for concurrent programming."
+        </blockquote>
         <em>ref: <a href="https://golang.org/ref/spec">https://golang.org/ref/spec</a></em>
         </li>
         <br>
@@ -55,16 +80,17 @@
         <li>
         From my understanding, the language offers a concise alternative to object orientation methodology
         and yet, it presents a powerful approach to program scalable and natively concurrent codes.
-        Golang seems to be designed to harness the power of parallel processing enabled by multicore CPUs with
-        the earliest generations of were only available to the general public from 2005/2006 onwards.
-        Probably, the inventors wanted to create a language which is modern and powerful, but at the same time
-        more streamlined and less complexed than C++. Created shortly after the first availabilty of multicore
-        processing to the general public, they must had designed Golang with concurrency in mind. In comparison to
-        older, pre-multicore, enterprise grade languages, Golang is expected to run much cheaper multiple processes 
-        and deliver much better scalability
+        Golang seems to be designed from the beginning to harness the power of parallel processing enabled by the 
+        emergence of multicore CPUs for mass computer users, back in 2005/2006. After all, Go was developed 
+        right after the outset of the earliest generation of the multicores. Indeed, as the result, the inventors 
+        might have created a language which is both modern and powerful, and at the same time, more streamlined 
+        and less complexed than C++. In comparison to older enterprise level languages, created during pre-multicore
+        era, Go is expected to run large number of multiple processes with high efficiency 
+        and handle scalability with ease.
         </li>
         </ul>
-    </p>
 
+    </p>
+    <h2>Let's get less serious and start to have fun coding, in the simplicity of Golang ! </h2>
 </body>
 </html>
