--- a/tags.html
+++ b/tags.html
@@ -5,9 +5,17 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>HTML Tags</title>
+    <style>
+    table,th,td{
+      border:1px solid rgb(245, 55, 55); 
+      width:auto;
+      border-collapse:collapse;
+      }
+    th,td{text-align: left;padding:5px;}
+    </style>
 </head>
 <body>
-    <div>
+    <div style="text-align: right">
         <a href="index.html">Home</a>&mdash;
         <!--a href="tags.html">HTML Tags</a-->
         <a href="moby_dick.html">Moby Dick</a>&mdash;
@@ -33,7 +41,7 @@
 
     <h2>Block Elements</h2>
 
-    <table>
+    <table >
       <tr>
         <th>Tag</th>
         <th>Name</th>
@@ -73,7 +81,6 @@
 
     <h2>Block With Inline Elements</h2>
 
-    <table>
         <table>
             <tr>
               <th>Tag</th>
@@ -121,7 +128,6 @@
               <td><img src="https://bit.ly/1MZAFuQ" alt="Michael Hartl"></td>
             </tr>
           </table>
-    </table>
 
 </body>
 </html>
