--- a/go_index.html
+++ b/go_index.html
@@ -7,11 +7,12 @@
     <title>Let's Go</title>
 
     <style>
-        h1,h2,h4   {color: #5884ad;font-family:Verdana, Geneva, Tahoma, sans-serif;}
+        h1,h2,h4   {text-align:center;color: #406180;font-family:Verdana, Geneva, Tahoma, sans-serif;}
         body {
-            background-color:#eeeff1;font-size: 16px; 
+            background-color:#ffffff;font-size: 16px; 
             line-height: 200%;font-family:Verdana, Geneva, Tahoma, sans-serif;
             font-style: normal;font-weight: normal;
+            color:rgb(0, 0, 0);
             }
         a:link{color: #5884ad;text-decoration-line:underline;}
         li{margin-top: 20px;}
@@ -20,12 +21,11 @@
         div.gallery {
         display: block;
         margin: 10px;
+        padding: 10px;
         border: 1px solid #ccc;
-        float:none;   
-        width: auto;
+        float:right;   
         background-color: hsl(193, 78%, 86%);
-        color:azure;
-        text-align: center;
+        color:rgb(95, 129, 129);
         }
 
         div.gallery:hover {
@@ -39,12 +39,13 @@
             margin-right: 10px;
             width: auto;
             height:50px; 
-            vertical-align: top;
+            vertical-align:bottom;
+            margin: 8px;
         }
 
         div.desc {         
             padding:0px;
-            color:#5884ad;
+            color:#406180;
             text-align: center;
         }
     </style>
@@ -56,13 +57,13 @@
         <a target="_blank" href="images/go.png">
                 <img src="images/go.png" alt="go symbol">
         </a>
-        <a target="_blank" href="http://golang.org"> Go Official Website</a>&mdash;
+        <a target="_blank" href="http://golang.org">Go Official Website</a>&mdash;
         <a target="_blank" href="http://godoc.org">Go Documentation</a>&mdash;
         <a target="_blank" href="http://play.golang.org">Go Playground</a>&mdash;
         <a target="_blank" href="http://tour.golang.org">Go Tour</a>
         <div class="desc"><em><strong>Let's Go!</strong></em></div>
     </div>
-    <div>
+    <div style="text-align: center;">
             <a href="index.html">Home</a>
             <a href="tags.html">HTML Tags</a>
             <a href="moby_dick.html">Moby Dick</a> 
