--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     
 </head>
 <body>
-    <div>
+    <div style="text-align: right">
         <!--a href="index.html">Home</a-->
         <a href="tags.html">HTML Tags</a>&mdash;
         <a href="moby_dick.html">Moby Dick</a>&mdash;  
@@ -60,6 +60,23 @@
      <a href="https://www.pexels.com/photo/apple-device-beverage-black-coffee-cafe-551993/" target="_blank">
      <img src="images/laptopCoffee.jpeg" alt="laptop and coffee" >
      </a>
+
+     <h2>Quotations</h2>
+
+     <p>
+       In addition to hosting most of the world's supply of videos, the
+       Web is also full of inspiring quotes, perhaps none more so than this one:
+     </p>
+ 
+     <blockquote style="padding:2px 20px;text-align:center;background: #fafafa;">
+       <p>
+         <em>Don't believe every quote you read on the Internet.</em>
+         <br>
+         —Anonymous
+       </p>
+     </blockquote>
+ 
+
     <h2>Background</h2>
      <p>
         Learn Enough to Be Dangerous is an outgrowth of the
